--- a/templates/write_report.jinja2
+++ b/templates/write_report.jinja2
@@ -22,6 +22,8 @@ Here is what we have written so far:
 
 We need to continue writing the report. Your task is to write the section: {{ current_section.title }}.
 
-If this is the references section, you should list the references used in the report. For other sections, you should be providing in-text citations. Please use APA style for citations.
+Please cite your sources using in-text citations in the APA style.
 
-Please do so now. Start by writing the section title, and continue by writing the content of the section.
+Make use of beautiful markdown formatting.
+
+Please write the {{ current_section }} now. Start by writing the section title, and continue by writing the content of the section.
